[package]
description = "Generate passwords"
documentation = "https://docs.rs/crate/pwgen"
edition = "2021"
homepage = "https://crates.io/crates/pwgen"
license = "MIT"
name = "pwgen"
readme = "README.md"
repository = "https://github.com/mdmundo/pwgen"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "2.1.0"
rand = "0.8.5"
structopt = "0.3.26"

[dev-dependencies]
rstest = "0.12.0"
