[package]
categories = ["command-line-utilities"]
description = "Generate passwords"
documentation = "https://docs.rs/crate/pwgen"
edition = "2021"
homepage = "https://crates.io/crates/pwgen"
keywords = ["password", "generator"]
license = "MIT"
name = "pwgen"
readme = "README.md"
repository = "https://github.com/mdmundo/pwgen"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
rand = "0.8.5"
structopt = "0.3.26"

[dev-dependencies]
rstest = "0.15.0"
